# tendenci

./: .flake8  .gitignore  .readthedocs.yml  .travis.yml  CHANGELOG.md  CHANGELOG.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  INSTALL.md  LICENSE  LICENSE.md  MANIFEST.in  README  README.md  SECURITY.md  THEMING.md  demostrator.md  local_settings_sample.py  memberships_export.csv  pyproject.toml  requirements.txt  settings.py  setup.py  setup.py.bak  transifex.sh  urls.py
.github/: FUNDING.yml
.github/workflows/: codeql.yml
.tx/: config
apps/accountings/: managers.py  utils.py
apps/accounts/: app_registry.py  decorators.py  forms.py  urls.py  utils.py  views.py
apps/actions/: app_registry.py  forms.py  models.py  tasks.py  urls.py  utils.py  views.py
apps/api/: models.py  utils.py  views.py
apps/api_piston/: forms.py  handlers.py  urls.py
apps/api_tasty/: admin.py  api.py  auth.py  forms.py  resources.py  serializers.py  urls.py  validation.py
apps/articles/: admin.py  app_registry.py  feeds.py  forms.py  management.py  managers.py  models.py  module_meta.py  permissions.py  search_indexes.py  settings.json  urls.py  views.py
apps/base/: auth.py  context_processors.py  fields.py  forms.py  http.py  middleware.py  (+6 more)
deploy/: deploy.wsgi
docs/: Makefile  credits.md  custom-templates.md  features-overview.md  heroku.md  jobs.md  make.bat  memberships.md  mobile.md  newsletter-templates.md  requirements.txt  roadmap.md  template-definitions.md  template-tags.md
plugins/: apps.json
requirements/: README.txt  common.txt  dev-old.txt  dev.txt  prod.txt  test.txt
scripts/: requirements.txt  requirements_server.txt  tendenci-boot-server.sh  tendenci-boot.sh
site_media/: readme.txt
templates/: 403.html  404.html  500.html  base-column.html  base-wide.html  base.html  dashboard.html  default.html  footer.html  form-confirmation.html  form-email.html  form.html  homepage.html  nav.html  site_map.html  tag_test.html
tendenci/: __init__.py  dj_static.py  settings.py  templates.t7  templates.t8  tendenci  urls.py
(+13700 files in other folders)
